[package]
name = "erc_4626_20"
version = "0.1.0"
authors = ["Jeremy Boetticher"]
edition = "2021"

[dependencies]
ink = { version = "4.3", default-features = false, features = ["call-runtime"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

sp-io = { version = "23.0.0", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime = { version = "24.0.0", default-features = false }

# openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", branch = "develop", default-features = false }
# erc20 = { path = "../erc20", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = "4.3"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-io/std",
]
ink-as-dependency = []
e2e-tests = []
